# negative-image

./: .gitignore  README.md  docker-compose.yml  manage.py
client/: Dockerfile  package-lock.json
client/public/: index.html
client/src/: index.js
client/src/components/: AddImage.jsx
project/: Dockerfile  __init__.py  config.py  pyproject.toml
project/api/: __init__.py  image.py  models.py
project/tests/: conftest.py  test_image.py
