[tool.poetry]
name = "app"
version = "0.1.0"
description = "Negative image app"
authors = ["Admin <admin@netmin.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "2.0.1"
Flask-SQLAlchemy = "2.5.1"
flask-cors = "3.0.10"
flask-restx = "0.5.0"
psycopg2-binary = "2.9.1"
flask-file-upload = "0.2.0"
opencv-python-headless = "4.4.0.46"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
